test/deprecated-keyword/parenful/not-parenless.chpl
@deprecated(notes="the parenful version of function f() is deprecated", parenful=true)
proc f() {
    return 42;
}

var x = f();
